--- a/src/classes/PerformLeadActionBatch.cls
+++ b/src/classes/PerformLeadActionBatch.cls
@@ -9,7 +9,7 @@ public class PerformLeadActionBatch implements Database.Batchable<sObject>, Data
 	} 
  
 	public void execute(Database.BatchableContext bc, List<SObject> participantList) {
-		PerformCadenceActionBatchService.runSequenceEngine(CadenceConstants.LEAD_OBJECT_NAME, participantList);
+		PerformCadenceActionBatchService.runSequenceEngine(CadenceConstants.LEAD_OBJECT_NAME, participantList, null);
 	}
 
 	public void finish(Database.BatchableContext bc) {
