--- a/src/classes/PerformCadenceActionBatchService.cls
+++ b/src/classes/PerformCadenceActionBatchService.cls
@@ -1,6 +1,6 @@
 public class PerformCadenceActionBatchService {
     
-    public static void runSequenceEngine(string participantType, List<SObject> participantList) {	
-    	SequenceEngine.processSequences(participantType, participantList, false);
+    public static void runSequenceEngine(string participantType, List<SObject> participantList, List<SObject> parentParticipantList) {	
+    	SequenceEngine.processSequences(participantType, participantList, parentParticipantList, false);
     }
 }
